--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     </scm>
 
     <properties>
+        <jackson.version>2.8.9</jackson.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,6 +36,7 @@
 
     <modules>
         <module>conf4j-all</module>
+        <module>conf4j-consul</module>
         <module>conf4j-core</module>
     </modules>
 
@@ -81,7 +83,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.8.9</version>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>22.0</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -102,6 +114,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-text</artifactId>
                 <version>1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>1.4.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
