--- a/conf4j-core/pom.xml
+++ b/conf4j-core/pom.xml
@@ -63,5 +63,10 @@
             <artifactId>commons-text</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
