--- a/conf4j-all/pom.xml
+++ b/conf4j-all/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.advpos.conf4j</groupId>
+        <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
         <version>2017.7.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -13,17 +13,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.advpos.conf4j</groupId>
+            <groupId>org.conf4j</groupId>
             <artifactId>conf4j-consul</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.advpos.conf4j</groupId>
+            <groupId>org.conf4j</groupId>
             <artifactId>conf4j-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.advpos.conf4j</groupId>
+            <groupId>org.conf4j</groupId>
             <artifactId>conf4j-etcd</artifactId>
             <version>${project.version}</version>
         </dependency>
