--- a/conf4j-core/pom.xml
+++ b/conf4j-core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>net.advpos.conf4j</groupId>
+        <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
         <version>2017.7.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
