--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.advpos.conf4j</groupId>
+    <groupId>org.conf4j</groupId>
     <artifactId>conf4j</artifactId>
     <version>2017.7.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>conf4j</name>
-    <url>https://github.com/advpos/conf4j</url>
+    <url>https://github.com/conf4j/conf4j</url>
 
     <licenses>
         <license>
@@ -19,12 +19,12 @@
     </licenses>
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/advpos/conf4j/issues</url>
+        <url>https://github.com/conf4j/conf4j/issues</url>
     </issueManagement>
     <scm>
-        <connection>scm:git:https://github.com/advpos/conf4j.git</connection>
-        <developerConnection>scm:git:git@github.com:advpos/conf4j.git</developerConnection>
-        <url>https://github.com/advpos/conf4j</url>
+        <connection>scm:git:https://github.com/conf4j/conf4j.git</connection>
+        <developerConnection>scm:git:git@github.com:conf4j/conf4j.git</developerConnection>
+        <url>https://github.com/conf4j/conf4j</url>
     </scm>
 
     <properties>
