--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,4 @@ Temporary Items
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
-
+target/
