--- a/conf4j-all/pom.xml
+++ b/conf4j-all/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
-        <version>2017.7.0-SNAPSHOT</version>
+        <version>2017.8.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
     <artifactId>conf4j-all</artifactId>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
