--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
                 <artifactId>testcontainers</artifactId>
                 <version>1.4.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.awaitility</groupId>
+                <artifactId>awaitility</artifactId>
+                <version>3.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
