Add consul watch reload strategy

--- a/conf4j-consul/pom.xml
+++ b/conf4j-consul/pom.xml
@@ -52,5 +52,10 @@
             <artifactId>testcontainers</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
