--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.conf4j</groupId>
     <artifactId>conf4j</artifactId>
-    <version>2017.8.0-SNAPSHOT</version>
+    <version>2017.8.0</version>
     <packaging>pom</packaging>
 
     <name>conf4j</name>
@@ -25,7 +24,8 @@
         <connection>scm:git:https://github.com/conf4j/conf4j.git</connection>
         <developerConnection>scm:git:git@github.com:conf4j/conf4j.git</developerConnection>
         <url>https://github.com/conf4j/conf4j</url>
-    </scm>
+      <tag>v2017.8.0</tag>
+  </scm>
 
     <properties>
         <jackson.version>2.8.9</jackson.version>
