--- a/conf4j-consul/pom.xml
+++ b/conf4j-consul/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
-        <version>2017.8.2</version>
+        <version>2017.8.3-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
