--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>conf4j-consul</module>
         <module>conf4j-core</module>
         <module>conf4j-etcd</module>
+        <module>ext-bean-validation</module>
     </modules>
 
     <build>
@@ -153,7 +154,7 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>22.0</version>
+                <version>23.0</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
