--- a/ext-bean-validation/pom.xml
+++ b/ext-bean-validation/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
-        <version>2017.10.1</version>
+        <version>2017.10.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
