--- a/conf4j-all/pom.xml
+++ b/conf4j-all/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.conf4j</groupId>
         <artifactId>conf4j</artifactId>
-        <version>2018.10.1</version>
+        <version>2018.10.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
