--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.conf4j</groupId>
     <artifactId>conf4j</artifactId>
-    <version>2018.10.1</version>
+    <version>2018.10.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>conf4j</name>
@@ -25,7 +25,7 @@
         <connection>scm:git:https://github.com/conf4j/conf4j.git</connection>
         <developerConnection>scm:git:git@github.com:conf4j/conf4j.git</developerConnection>
         <url>https://github.com/conf4j/conf4j</url>
-      <tag>v2018.10.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
